# moj-vector-data-v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Containerfile.ingest-ai-app  Containerfile.ingest-app  Containerfile.search-app  README.md  pyproject.toml
apps/ingest-app/: README.md  pyproject.toml
apps/ingest-app/src/ingest_app/: __init__.py
apps/search-app/: pyproject.toml
apps/search-app/src/search_app/: __init__.py
contrib/text-embeddings-inference/: Dockerfile-arm64
deploy/docker/: README.md  docker-compose.cpu-ipex.yaml  docker-compose.local.yaml  docker-compose.yaml
deploy/openshift/: README.md
deploy/openshift/deployment/: image-stream-ingest.yaml  image-stream.yaml  search-app.yaml
deploy/openshift/ingestion-ai/: image-stream-ingest.yaml
deploy/openshift/milvus/: README.md  values.yaml
deploy/openshift/pipeline-runs/: drop-ingest-resources-run.yaml  ingest-app-build-piperun.yaml  ingest-dwp-design-piperun.yaml  ingest-govuk-design-piperun.yaml  ingest-hmrc-design-piperun.yaml  ingest-moj-frontend-piperun.yaml  search-app-build-piperun.yaml  vibe-ui-app-build-piperun.yaml
deploy/openshift/pipelines/: build-application.yaml  ingest-content-ai.yaml  ingest-content.yaml
deploy/openshift/tasks/: moj-ingest-ai-task.yaml  moj-ingest-task.yaml
deploy/openshift/webhooks/: dwp-design-listener.yaml  dwp-design-template.yaml  git-repo-binding.yaml  govuk-design-listener.yaml  govuk-design-template.yaml  hmrc-design-listener.yaml  hmrc-design-template.yaml  ingestion-ai-app-listener-route.yaml  ingestion-app-listener.yaml  ingestion-app-template.yaml  moj-frontend-listener.yaml  moj-frontend-template.yaml  (+7 more)
(+6 files in other folders)
